--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-query": "1.5.7",
+    "react-query-devtools": "1.1.17",
     "react-scripts": "3.3.0"
   },
   "devDependencies": {
