--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.12.0",
     "react-query": "1.5.7",
     "react-query-devtools": "1.1.17",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "tiny-emitter": "2.1.0"
   },
   "devDependencies": {
     "@types/react": "16.9.19",
