--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-query": "1.5.7",
-    "react-query-devtools": "1.1.17",
     "react-scripts": "3.3.0",
+    "swr": "0.2.2",
     "tiny-emitter": "2.1.0"
   },
   "devDependencies": {
